@@ -1,9 +1,9 @@
 <gconfschemafile>
   <schemalist>
     <schema>
-      <key>/schemas/apps/::PACKAGE::/show_trayicon</key>
-      <applyto>/apps/::PACKAGE::/show_trayicon</applyto>
-      <owner>::PACKAGE::</owner>
+      <key>/schemas/apps/krb5-auth-dialog/show_trayicon</key>
+      <applyto>/apps/krb5-auth-dialog/show_trayicon</applyto>
+      <owner>krb5-auth-dialog</owner>
       <type>bool</type>
       <default>1</default>
 
@@ -14,9 +14,9 @@
     </schema>
 
     <schema>
-      <key>/schemas/apps/::PACKAGE::/principal</key>
-      <applyto>/apps/::PACKAGE::/principal</applyto>
-      <owner>::PACKAGE::</owner>
+      <key>/schemas/apps/krb5-auth-dialog/principal</key>
+      <applyto>/apps/krb5-auth-dialog/principal</applyto>
+      <owner>krb5-auth-dialog</owner>
       <type>string</type>
       <default></default>
 
@@ -27,9 +27,9 @@
     </schema>
 
     <schema>
-      <key>/schemas/apps/::PACKAGE::/pk_userid</key>
-      <applyto>/apps/::PACKAGE::/pk_userid</applyto>
-      <owner>::PACKAGE::</owner>
+      <key>/schemas/apps/krb5-auth-dialog/pk_userid</key>
+      <applyto>/apps/krb5-auth-dialog/pk_userid</applyto>
+      <owner>krb5-auth-dialog</owner>
       <type>string</type>
       <default></default>
 
@@ -40,9 +40,9 @@
     </schema>
 
     <schema>
-      <key>/schemas/apps/::PACKAGE::/pk_anchors</key>
-      <applyto>/apps/::PACKAGE::/pk_anchors</applyto>
-      <owner>::PACKAGE::</owner>
+      <key>/schemas/apps/krb5-auth-dialog/pk_anchors</key>
+      <applyto>/apps/krb5-auth-dialog/pk_anchors</applyto>
+      <owner>krb5-auth-dialog</owner>
       <type>string</type>
       <default></default>
 
@@ -53,9 +53,9 @@
     </schema>
 
     <schema>
-      <key>/schemas/apps/::PACKAGE::/prompt_minutes</key>
-      <applyto>/apps/::PACKAGE::/prompt_minutes</applyto>
-      <owner>::PACKAGE::</owner>
+      <key>/schemas/apps/krb5-auth-dialog/prompt_minutes</key>
+      <applyto>/apps/krb5-auth-dialog/prompt_minutes</applyto>
+      <owner>krb5-auth-dialog</owner>
       <type>int</type>
       <default>30</default>
 
@@ -66,9 +66,9 @@
     </schema>
 
     <schema>
-      <key>/schemas/apps/::PACKAGE::/forwardable</key>
-      <applyto>/apps/::PACKAGE::/forwardable</applyto>
-      <owner>::PACKAGE::</owner>
+      <key>/schemas/apps/krb5-auth-dialog/forwardable</key>
+      <applyto>/apps/krb5-auth-dialog/forwardable</applyto>
+      <owner>krb5-auth-dialog</owner>
       <type>bool</type>
       <default>0</default>
 
@@ -79,9 +79,9 @@
     </schema>
 
     <schema>
-      <key>/schemas/apps/::PACKAGE::/renewable</key>
-      <applyto>/apps/::PACKAGE::/renewable</applyto>
-      <owner>::PACKAGE::</owner>
+      <key>/schemas/apps/krb5-auth-dialog/renewable</key>
+      <applyto>/apps/krb5-auth-dialog/renewable</applyto>
+      <owner>krb5-auth-dialog</owner>
       <type>bool</type>
       <default>0</default>
 
@@ -92,9 +92,9 @@
     </schema>
 
     <schema>
-      <key>/schemas/apps/::PACKAGE::/proxiable</key>
-      <applyto>/apps/::PACKAGE::/proxiable</applyto>
-      <owner>::PACKAGE::</owner>
+      <key>/schemas/apps/krb5-auth-dialog/proxiable</key>
+      <applyto>/apps/krb5-auth-dialog/proxiable</applyto>
+      <owner>krb5-auth-dialog</owner>
       <type>bool</type>
       <default>0</default>
 
